labmap2/labmap-backend_Deployment_labmap2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labmap-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: labmap-backend
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: labmap-backend
    spec:
      containers:
      - env: []
        image: ghcr.io/ocf/labmap2-backend:60d8434e56261decb92e6aea6196d327f0beb806
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 3
        name: main
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      dnsConfig:
        searches:
        - ocf.berkeley.edu
      dnsPolicy: ClusterFirst
