labmap2/labmap-frontend_Deployment_labmap2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labmap-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: labmap-frontend
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: labmap-frontend
    spec:
      containers:
      - image: ghcr.io/ocf/labmap2-frontend:60d8434e56261decb92e6aea6196d327f0beb806
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 8080
      dnsConfig:
        searches:
        - ocf.berkeley.edu
      dnsPolicy: ClusterFirst
