labmap2/labmap2-frontend_Service_labmap2.yaml
apiVersion: v1
kind: Service
metadata:
  name: labmap2-frontend
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    transpire.ocf.io/deployment: labmap-frontend
